fixed some overflow on mobile screens

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -1,6 +1,7 @@
 html {
     font-size: 15px;
     box-sizing: border-box;
+    overflow-x: hidden;
     
 }
 
