--- a/app/scss/_pricing.scss
+++ b/app/scss/_pricing.scss
@@ -26,6 +26,7 @@
         z-index: 2;
         position: relative;
         padding: 5.25rem 0rem 1.25rem 0rem;
+        width: 100vw;
     }
     
     h1 {
